2013-05-22 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  STM8: More efficient xor, or, and. Fix overwriting of shift count in shifts, fix comparison with upper byte in a, fix long comparison stacked offset, fix unsigned long / unsigned long long comparison.

2013-05-22 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCopt.c:
	  STM8: Disable broken optimization of comparisons into and.
	* src/stm8/gen.c:
	  STM8: Slightly more efficient shifts, fix long ifx, fix use of word rotation in copy, fix handling of a in signed cast.

2013-05-21 Valentin Dudouyt <valentin dudouyt AT gmail.com>                                                              

	* src/stm8/main.c,
	* src/SDCCglue.c:
	STM8: Fixed init code: some of GSINIT parts aren't executed under certain linking conditions.

2013-05-20 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  More efficient cast from _Bool,
	* src/z80/peep.c:
	  Fix recognition of xor as writing a in peepholes.

2013-05-20 Maarten Brock <sourceforge.brock AT dse.nl>

	* Small Device C Compiler 3.3.0 released
	* .version, doc/sdccman.lyx: changed sdcc version to 3.3.1

2013-05-19 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  STM8: Fix long and long long comparison.

2013-05-19 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/stm8/gen.c:
	  STM8: Give up trying to fix big-endian bit-fields. Make bit-fields little-endian.

2013-05-19 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* sim/ucsim/stm8.src/instcl.h,
	  sim/ucsim/stm8.src/inst.cc,
	  sim/ucsim/stm8.src/stm8mac.h,
	  sim/ucsim/stm8.src/glob.cc,
	  sim/ucsim/stm8.src/stm8.cc,
	  sdas/asstm8/stm8mch.c:
	  STM8: Patches by Valentin Dudouyt to fix simulator.
	* src/stm8/gen.c:
	  STM8: Fix conditional jump, address generation for on-stack variables.
	* device/lib/_mullong.c,
	  device/lib/_mulint.c,
	  device/lib/stm8/Makefile.in,
	  device/lib/_mulschar.c,
	  device/lib/_modschar.c,