@@ -1,6 +1,11 @@
 2013-05-22 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/stm8/gen.c:
+	  STM8: Fix float negation.
+
+2013-05-22 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/stm8/gen.c:
 	  STM8: More efficient xor, or, and. Fix overwriting of shift count in shifts, fix comparison with upper byte in a, fix long comparison stacked offset, fix unsigned long / unsigned long long comparison.
 
 2013-05-22 Philipp Klaus Krause <pkk AT spth.de>
